# pokala-healthops

./: .dockerignore  .env.example  .gitignore  APPLY.md  CHANGELOG.md  Dockerfile.api  IMPLEMENTED_VS_ROADMAP.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  final_polish.py  finish_hardening.py  mkdocs.yml  patch_replay.py  pyproject.toml
.github/workflows/: ci.yml  (+2 more)
airflow/: README.md
contracts/: adt_contract.yml  oru_contract.yml
dbt/: README.md
dbt_openhip/: dbt_project.yml
docs/: architecture.md  data-strategy.md  decisions.md  deployment.md  evidence.md  incident-demo.md  index.md  interview-story.md  interview.md  observability.md  platform-stack.md  portfolio-positioning.md  public-data.md  roadmap.md  security.md  status.md  styles.css
evidence/: audit-events.json  dlq-after.json  metrics-sample.prom  replay-invariants.json
infra/: api.Dockerfile
openhip/: cli.py  contracts.py  db.py  fhir.py  metrics.py  models.py  mpi.py  pipeline.py  public_data.py  reliability.py  settings.py
openhip_command_center.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pokala_healthops.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pokala_healthops_hardening_patch/: Makefile  README.md  STATUS.md
scripts/: fresh_clone_test.sh  windows_smoke.ps1
tests/: test_api.py  test_api_contract.py  test_contract_validation_edges.py  test_contracts.py  test_evidence_integrity.py  test_mpi.py  test_pipeline.py  test_public_data_enrichment.py  test_replay_invariants.py
tools/: rebrand_pokala_healthops.py
warehouse/: dbt_project.yml  profiles.yml
(+58 files in other folders)
