[project]
name = "openhip-command-center"
version = "0.9.0"
description = "Local-first, no-PHI control plane for healthcare interface operations"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "rapidfuzz>=3.9",
  "prometheus-client>=0.20",
  "mkdocs-material>=9.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["openhip*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
